# mixy-dfu

./: README.md  pyproject.toml
.github/workflows/: release.yml
build_res/: shiv_preamble.py
mixy_dfu/: main.py  utils.py
